--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
   },
   "require": {
     "php": ">=5.5.9",
-    "doctrine/doctrine-bundle": "^1.6",
-    "twitter/bootstrap": "3.*",
     "components/jquery": "1.11.1",
+    "doctrine/doctrine-bundle": "^1.6",
     "doctrine/doctrine-cache-bundle": "^1.2",
     "doctrine/orm": "^2.5",
+    "friendsofsymfony/user-bundle": "^2.0",
     "incenteev/composer-parameter-handler": "^2.0",
     "sensio/distribution-bundle": "^5.0",
     "sensio/framework-extra-bundle": "^3.0.2",
@@ -34,7 +34,8 @@
     "symfony/polyfill-apcu": "^1.0",
     "symfony/swiftmailer-bundle": "^2.3.10",
     "symfony/symfony": "3.2.*",
-    "twig/twig": "^1.0||^2.0"
+    "twig/twig": "^1.0||^2.0",
+    "twitter/bootstrap": "3.*"
   },
   "require-dev": {
     "sensio/generator-bundle": "^3.0",
